# quantum_simulator

./: .gitignore  README.md  makefile  quantum_simulator  run_tests  test_gates_manual.cpp
backend/assembly/: matrix_ops.asm  parallel_ops.asm  vector_norm.asm
backend/src/: circuit_manager.cpp  circuit_manager.h  gate_engine.cpp  gate_engine.h  main.cpp  quantum_gate.h  qubit_manager.cpp  qubit_manager.h  utils.cpp  utils.h
backend/tests/: CMakeLists.txt  test_circuit_manager.cpp  test_gate_engine.cpp  test_qubit_manager.cpp
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  GETTING_STARTED.md  QUANTUM_GATES.md  README.md  TESTING.md  THEORY.md  USAGE.md
frontend/: CMakeLists.txt  resources.qrc
frontend/src/: MainWindow.qml  backend_bridge.cpp  backend_bridge.h  circuit_painter.cpp  circuit_painter.h  circuit_view.cpp  circuit_view.h  main.cpp  main_qml.cpp  mainwindow.cpp  mainwindow.h  results_window.cpp  results_window.h
frontend/tests/: test_gui.cpp
src/: main.cpp
